update parts of topic logic
Signed-off-by: tengattack <tengattack@foxmail.com>

--- a/views/topic/index.jade
+++ b/views/topic/index.jade
@@ -1,52 +1,1 @@
-extends ../common/layout
-
-block script
-  script(type='text/javascript').
-    function itemClick(e) {
-      if (e && e.target) {
-        if (e.target.tagName == 'A') {
-          return;
-        }
-      }
-      var url = $(this).find('a.header').attr('href');
-      if (url) {
-        window.location.href = url;
-      }
-    }
-    $('#topic_list .item').on('click', itemClick);
-
-block bodyheader
-  //include ../user/user-bar
-  include ../common/banner
-
-block content
-  div(id=active)
-    if (canPost)
-      a.ui.blue.button(href=base.rooturl + '/#{active}/add')
-        i.add.icon
-        = lang.topic.add
-
-    .ui.selection.divided.big.list#topic_list
-      each topic in topics
-        .item
-          .content
-            a.header(href=base.rooturl + '/#{active}/topic/#{topic._id}')= topic.title
-          .topic-info
-            if (topic.author)
-              - var u = topic.author;
-              include ../user/user-label
-            a(href=base.rooturl + '/#{active}/page/#{topic.author_id}')
-              i.suitcase.icon
-            span &nbsp;&nbsp;#{lang.topic.visit_count}: #{topic.visit_count}
-            span.time 
-              | &nbsp;&nbsp;#{lang.info.create_at}: #{topic.friendly_create_at}
-              if (topic.last_reply)
-                | &nbsp;&nbsp;#{lang.info.last_reply_at}: #{topic.friendly_last_reply_at}
-      else
-        .ui.icon.message
-          i.icon.exclamation
-          .content
-            .header= lang.info.tips
-            p= lang.topic.topics_not_found
-
-    include ../common/pagination
+include ./show
