--- a/views/index/index.jade
+++ b/views/index/index.jade
@@ -61,7 +61,7 @@ block content
         = lang.topic.latest_topics
       .ui.selection.divided.list
         each t in latest_topics
-          a.item(href=base.rooturl + '/news/topic/' + t._id)
+          a.item(href=base.rooturl + '/topic/' + t._id)
             .content
               .header= t.title
             //span.time.pull-right= t.friendly_create_at
