dashboard/board initial
Signed-off-by: tengattack <tengattack@foxmail.com>

--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -16,6 +16,10 @@ block content
           i.users.icon
           .content
             .header= lang.dashboard.user_management
+        a.item(href="/dashboard/board")
+          i.comment.icon
+          .content
+            .header= lang.dashboard.board_management
       hr
       .ui.animated.list
         a.item(href="/dashboard/install")
