--- a/views/dashboard/board.jade
+++ b/views/dashboard/board.jade
@@ -1,5 +1,78 @@
 extends ../common/layout
 
+block script
+  script(type='text/javascript').
+    var administrators = !{administrators};
+    function gen_pagelabelhtml(page_id, name) {
+      return '\
+            <div class="item">\
+              <div class="ui image label" href="/user/page/' + page_id + '" target="_blank">' + htmlspecialchars(name) + '<i class="delete icon" onclick="$(this).parent().parent().remove();"></i></div>\
+              <input type="hidden" name="board[administrator_ids][]" value="' + page_id + '" />\
+            </div>';
+    }
+
+    function setboard(bitem) {
+      var item = $(bitem);
+      item.parent().find('.item').removeClass('active');
+      item.addClass('active');
+
+      var b = item.data('board');
+      var form_info = $('#set_board_info');
+      var form_admin = $('#set_board_administrators');
+      var form_delete = $('#delete_board');
+      var admin_list = $('#administrators_list');
+
+      // info
+      form_info.find('input[name*=shortcut]').val(b.shortcut);
+      form_info.find('input[name*=name]').val(b.name);
+      form_info.find('input[name*=description]').val(b.description);
+      form_info.find('input[name*=parent]').val(b.parent);
+      // admin
+      form_admin.find('input[name*=shortcut]').val(b.shortcut);
+      // delete
+      form_delete.find('input[name*=shortcut]').val(b.shortcut);
+
+      admin_list.find('.item').remove();
+      if (b.administrator_ids) {
+        for (var i = 0; i < b.administrator_ids.length; i++) {
+          var page = administrators[b.administrator_ids[i]];
+          if (page) {
+            admin_list.append(gen_pagelabelhtml(page._id, page.name));
+          }
+        }
+      }
+    }
+
+    function successHandler(data) {
+      if (data) {
+        var uiMessage = $('#user_errmsg');
+        if (data.err && data.err.msg) {
+          uiMessage.find('#errmsg').html(data.err.msg);
+          uiMessage.show();
+        } else {
+          uiMessage.hide();
+
+          var odata = JSON.parse(data);
+          if (!odata || !odata.page) {
+            return;
+          }
+          var page = odata.page;
+          $('#administrators_list').append(gen_pagelabelhtml(page._id, page.name));
+        }
+      }
+    }
+
+    function check_admin_add() {
+      var page_id = $('#page_id').val();
+      if (page_id) {
+        $('#page_id').val('');
+        $.ajax({
+          url: '/api/user/page/' + page_id,
+          success: successHandler
+        });
+      }
+    }
+
 block bodyheader
   div.segment
     div.container#overview
@@ -9,76 +82,126 @@ block bodyheader
           = lang.dashboard.board_management
 
 block content
+  .ui.vertical.menu(style='float:left;margin-left:-250px')
+    .header.item
+      i.comment.icon
+      = lang.title.board.index
+    each board in boards
+      a.item(data-board=board, onclick='setboard(this)')
+        //a(href='/board/' + board.shortcut, target='_blank')
+          i.external.url.icon
+        = board.name
   .ui.three.column.grid
-    .column
-      .ui.form.raised.segment
-        .ui.top.attached.label
-          i.lock.icon
-          span= lang.info.dashboard.new_board
-        .field
-          form.ui.form(enctype='application/x-www-form-urlencoded', method='POST', action='/dashboard/board')
-            div(style='display:none')
-              input(type='hidden', name='csrf', value=user.csrf)
-              input(type='hidden', name='action', value='new_board')
-            .field(class=(err.creation.board_name ? 'error' : ''))
-              .ui.left.labeled.icon.input
-                input(maxlength='20', type='text', name='board[name]', placeholder=lang.board.name)
-                i.icon.user
-                .ui.corner.label
-                  i.icon.asterisk
-            .field(class=(err.creation.board_description ? 'error' : ''))
-              .ui.left.labeled.icon.input
-                textarea(name='board_description', placeholder=lang.board.description)
-                i.icon.lock
-                .ui.corner.label
-                  i.icon.asterisk
-            .field(class=(err.creation.parent ? 'error' : ''))
-              .ui.left.labeled.icon.input
-                input(type='text', name='board[parent]', placeholder=lang.board.parent)
-                i.icon.user
-                .ui.corner.label
-                  i.icon.asterisk
-            .field(class=(err.creation.shortcut ? 'error' : ''))
-              .ui.left.labeled.icon.input
-                input(type='text', name='board[shortcut]', placeholder=lang.board.shortcut)
-                i.icon.user
-                .ui.corner.label
-                  i.icon.asterisk
-            .form-actions
-              button.ui.blue.submit.button(type='submit')= lang.info.submit
-    .column
-      .ui.form.raised.segment
-        .ui.top.attached.label
-          i.lock.icon
-          span= lang.info.dashboard.set_board_info
-        .field
-          form.ui.form(enctype='application/x-www-form-urlencoded', method='POST', action='/dashboard/board')
-            div(style='display:none')
-              input(type='hidden', name='csrf', value=user.csrf)
-              input(type='hidden', name='action', value='set_board_info')
-            .field(class=(err.creation.board_name ? 'error' : ''))
-              .ui.left.labeled.icon.input
-                input(maxlength='20', type='text', name='board[name]', placeholder=lang.board.name)
-                i.icon.user
-                .ui.corner.label
-                  i.icon.asterisk
-            .field(class=(err.creation.board_description ? 'error' : ''))
-              .ui.left.labeled.icon.input
-                textarea(name='board_description', placeholder=lang.board.description)
-                i.icon.lock
-                .ui.corner.label
-                  i.icon.asterisk
-            .field(class=(err.creation.parent ? 'error' : ''))
-              .ui.left.labeled.icon.input
-                input(type='text', name='board[parent]', placeholder=lang.board.parent)
-                i.icon.user
-                .ui.corner.label
-                  i.icon.asterisk
-            .field(class=(err.creation.shortcut ? 'error' : ''))
-              .ui.left.labeled.icon.input
-                input(type='text', name='board[shortcut]', placeholder=lang.board.shortcut)
-                i.icon.user
-                .ui.corner.label
-                  i.icon.asterisk
-            .form-actions
-              button.ui.blue.submit.button(type='submit')= lang.info.submit
+    .row
+      .column
+        .ui.form.raised.segment#set_board_info
+          .ui.top.attached.label
+            i.lock.icon
+            span= lang.info.dashboard.set_board_info
+          .field
+            form.ui.form(enctype='application/x-www-form-urlencoded', method='POST', action='/dashboard/board')
+              div(style='display:none')
+                input(type='hidden', name='csrf', value=user.csrf)
+                input(type='hidden', name='action', value='set_board_info')
+              .field(class=(err.shortcut ? 'error' : ''))
+                .ui.left.labeled.icon.input
+                  input.disabled(type='text', name='board[shortcut]', placeholder=lang.board.shortcut, readonly)
+                  i.icon.code
+                  .ui.corner.label
+                    i.icon.asterisk
+              .field(class=(err.board_name ? 'error' : ''))
+                .ui.left.labeled.icon.input
+                  input(maxlength='20', type='text', name='board[name]', placeholder=lang.board.name)
+                  i.icon.comment
+                  .ui.corner.label
+                    i.icon.asterisk
+              .field(class=(err.board_description ? 'error' : ''))
+                .ui.left.labeled.icon.input
+                  textarea(name='board[description]', placeholder=lang.board.description)
+                  i.icon.info
+              .field(class=(err.parent ? 'error' : ''))
+                .ui.left.labeled.icon.input
+                  input(type='text', name='board[parent]', placeholder=lang.board.parent)
+                  i.icon.chat
+              .form-actions
+                button.ui.blue.submit.button(type='submit')= lang.info.submit
+      .column
+        .ui.form.raised.segment#set_board_administrators
+          .ui.top.attached.label
+            i.lock.icon
+            span= lang.info.dashboard.set_board_administrators
+          .field
+            form.ui.form(enctype='application/x-www-form-urlencoded', method='POST', action='/dashboard/board')
+              div(style='display:none')
+                input(type='hidden', name='csrf', value=user.csrf)
+                input(type='hidden', name='action', value='set_board_administrators')
+              .field(class=(err.shortcut ? 'error' : ''))
+                .ui.left.labeled.icon.input
+                  input.disabled(type='text', name='board[shortcut]', placeholder=lang.board.shortcut, readonly)
+                  i.icon.code
+                  .ui.corner.label
+                    i.icon.asterisk
+              .example.field#administrators
+                #administrators_list
+                .ui.error.message(style='display:none;')#user_errmsg
+                  i.close.icon(onclick='$(this).parent().hide();')
+                  .header= lang.info.error
+                  p#errmsg
+              .field
+                .ui.left.labeled.icon.action.input
+                  input#page_id(type='text', placeholder=lang.user.page)
+                  i.icon.user
+                  .ui.button(onclick='check_admin_add();')= lang.info.add
+              .form-actions
+                button.ui.blue.submit.button(type='submit')= lang.info.submit
+      .column
+        .ui.form.raised.segment#delete_board
+          .ui.top.attached.label
+            i.lock.icon
+            span= lang.info.dashboard.delete_board
+          .field
+            form.ui.form(enctype='application/x-www-form-urlencoded', method='POST', action='/dashboard/board')
+              div(style='display:none')
+                input(type='hidden', name='csrf', value=user.csrf)
+                input(type='hidden', name='action', value='delete_board')
+              .field(class=(err.shortcut ? 'error' : ''))
+                .ui.left.labeled.icon.input
+                  input.disabled(type='text', name='board[shortcut]', placeholder=lang.board.shortcut, readonly)
+                  i.icon.code
+                  .ui.corner.label
+                    i.icon.asterisk
+              .form-actions
+                button.ui.red.submit.button(type='submit')= lang.info.delete
+    .row
+      .column
+        .ui.form.raised.segment#new_board
+          .ui.top.attached.label
+            i.lock.icon
+            span= lang.info.dashboard.new_board
+          .field
+            form.ui.form(enctype='application/x-www-form-urlencoded', method='POST', action='/dashboard/board')
+              div(style='display:none')
+                input(type='hidden', name='csrf', value=user.csrf)
+                input(type='hidden', name='action', value='new_board')
+              .field(class=(err.shortcut ? 'error' : ''))
+                .ui.left.labeled.icon.input
+                  input(type='text', name='board[shortcut]', placeholder=lang.board.shortcut)
+                  i.icon.code
+                  .ui.corner.label
+                    i.icon.asterisk
+              .field(class=(err.board_name ? 'error' : ''))
+                .ui.left.labeled.icon.input
+                  input(maxlength='20', type='text', name='board[name]', placeholder=lang.board.name)
+                  i.icon.comment
+                  .ui.corner.label
+                    i.icon.asterisk
+              .field(class=(err.board_description ? 'error' : ''))
+                .ui.left.labeled.icon.input
+                  textarea(name='board[description]', placeholder=lang.board.description)
+                  i.icon.info
+              .field(class=(err.parent ? 'error' : ''))
+                .ui.left.labeled.icon.input
+                  input(type='text', name='board[parent]', placeholder=lang.board.parent)
+                  i.icon.chat
+              .form-actions
+                button.ui.blue.submit.button(type='submit')= lang.info.submit
