--- a/views/board/showtopics.jade
+++ b/views/board/showtopics.jade
@@ -1,14 +1,17 @@
 extends ../common/layout
 
+block stylesheet
+  link(rel='stylesheet', href=base.rooturl + '/static/css/topic.css?v=#{version.css}')
+
 block script
   script(type='text/javascript').
     function itemClick(e) {
       if (e && e.target) {
-        if (e.target.tagName == 'A') {
+        if (e.target.tagName == 'A' || e.target.tagName == 'IMG') {
           return;
         }
       }
-      var url = $(this).find('a.header').attr('href');
+      var url = $(this).find('.header a').attr('href');
       if (url) {
         window.location.href = url;
       }
@@ -22,26 +25,38 @@ block bodyheader
 block content
   div(id=active)
     if (canPost)
-      a.ui.blue.button(href=base.rooturl + '/#{active}/add')
-        i.add.icon
-        = lang.topic.add
+      .ui.segment
+        a.ui.blue.button(href=base.rooturl + '/#{active}/add')
+          i.add.icon
+          = lang.topic.add
 
-    .ui.selection.divided.big.list#topic_list
+    .ui.divided.list.segment#topic_list
       each topic in topics
         .item
+          if (topic.author)
+            - var u = topic.author;
+            include ../user/user-round
+          if (topic.author_id)
+            .user-topics
+              a(href=base.rooturl + '/topic/page/#{topic.author_id}')
+                i.suitcase.icon
           .content
-            a.header(href=base.rooturl + '/topic/#{topic._id}')= topic.title
-          .topic-info
-            if (topic.author)
-              - var u = topic.author;
-              include ../user/user-label
-            a(href=base.rooturl + '/topic/page/#{topic.author_id}')
-              i.suitcase.icon
-            span &nbsp;&nbsp;#{lang.topic.visit_count}: #{topic.visit_count}
-            span.time 
-              | &nbsp;&nbsp;#{lang.info.create_at}: #{topic.friendly_create_at}
-              if (topic.last_reply)
-                | &nbsp;&nbsp;#{lang.info.last_reply_at}: #{topic.friendly_last_reply_at}
+            .header
+              a(href=base.rooturl + '/topic/#{topic._id}')= topic.title
+            p
+              span.time 
+                | #{lang.info.create_at}: #{topic.friendly_create_at}
+                if (topic.last_reply)
+                  | &nbsp;&nbsp;#{lang.info.last_reply_at}: #{topic.friendly_last_reply_at}
+          .right.floated.ui.grid
+            .eight.wide.column.computer.only.numbers
+              .info
+                strong.number= topic.visit_count
+                | #{lang.topic.visit_count}
+              .info
+                strong.number= topic.reply_count
+                | #{lang.topic.reply_count}
+
       else
         .ui.icon.message
           i.icon.exclamation
