--- a/views/board/showtopics.jade
+++ b/views/board/showtopics.jade
@@ -22,6 +22,9 @@ block bodyheader
   //include ../user/user-bar
   include ../common/banner
 
+block treeview
+  include ./tree
+
 block content
   div(id=active)
     .ui.segment
