Amend last commit

--- a/views/board/showtopics.jade
+++ b/views/board/showtopics.jade
@@ -2,7 +2,7 @@ extends ../common/layout
 
 block stylesheet
   link(rel='stylesheet', href=base.rooturl + '/static/css/topic.css?v=#{version.css}')
-
+  link(rel='stylesheet', href=base.rooturl + '/static/css/treeview.css?v=#{version.css}')
 block script
   script(type='text/javascript').
     function itemClick(e) {
