--- a/public/static/css/treeview.css
+++ b/public/static/css/treeview.css
@@ -1,15 +1,36 @@
+.treeview {
+    float: left;
+    position: absolute;
+    margin-left: -250px;
+    width: 235px;
+    max-width: 235px;
+}
+
+@media only screen and (min-width : 1051px) and (max-width : 1725px) {
+    .treeview {
+        margin-left: -90px;
+    }
+    .mainview {
+        margin-left: 160px;
+    }
+}
+@media only screen and (max-width : 1050px) {
+    .treeview {
+        display: none;
+    }
+}
 .tree {
     min-height:20px;
-    padding:19px;
+    /* padding:19px; */
     margin-bottom:20px;
-    background-color:#fbfbfb;
+    /* background-color:#fbfbfb;
     border:1px solid #999;
     -webkit-border-radius:4px;
     -moz-border-radius:4px;
     border-radius:4px;
     -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
     -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
-    box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05)
+    box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05) */
 }
 .tree li {
     list-style-type:none;
@@ -47,6 +68,9 @@
 }
 .tree li.parent_li>span {
     cursor:pointer
+}
+.tree>ul {
+    padding-left: 0;
 }
 .tree>ul>li::before, .tree>ul>li::after {
     border:0
