update dashboard consts
Signed-off-by: tengattack <tengattack@foxmail.com>

--- a/views/board/showtopics.jade
+++ b/views/board/showtopics.jade
@@ -28,6 +28,9 @@ block bodyheader
 block content
   .treeview
     .ui.segment
+      .ui.top.attached.label
+        i.list.icon
+        span= lang.board.board_list
       if (boards)
         .tree
           ul
