--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -12,6 +12,10 @@ block content
   .ui.segment
     .dashboard-links
       .ui.animated.list
+        a.item(href="/dashboard/consts")
+          i.code.icon
+          .content
+            .header= lang.dashboard.consts
         a.item(href="/dashboard/user")
           i.users.icon
           .content
