--- a/views/user/login.jade
+++ b/views/user/login.jade
@@ -25,7 +25,7 @@ block content
         div.field(class=(err.password ? 'error' : ''))#password
           label= lang.user.password
           div.ui.left.labeled.icon.input
-            input(type='password', id='signin-password', name='user[password]', autocomplete='on', tabindex='2')
+            input(type='password', id='signin-password', name='user[password]', onkeydown='if (event.keyCode === 13) check_login();', autocomplete='on', tabindex='2')
             i.icon.lock
             div.ui.corner.label
               i.icon.asterisk
