--- a/views/page/print.jade
+++ b/views/page/print.jade
@@ -20,8 +20,10 @@ block pagecontent
     h3 时间
     p 7x24小时
 
-    h3 位置
-    p 目前取纸点位于学生宿舍3栋306
+    h3 位置 (取纸点)
+    ul
+      li 学生宿舍3栋302
+      li 学生宿舍1栋601
 
     h3 需要注意
     p 
