--- a/public/static/css/layout.css
+++ b/public/static/css/layout.css
@@ -390,3 +390,16 @@ hr {
   text-align: left;
   border-bottom: 1px solid #ddd;
 }
+
+.notification.unread {
+  background-color: #cb4437;
+  color: #fff;
+}
+
+.notification.unread:hover {
+  background-color: #d34c3f !important;
+}
+.notification.unread:active {
+  background-color: #db5447 !important;
+}
+
