--- a/views/error/404.jade
+++ b/views/error/404.jade
@@ -2,8 +2,7 @@ extends errorlayout
       
 block error-form
   .annotation
-    .ui.instructive.segment
-      h2.text-error {
+    pre.text-error {
         br
         |   "err": {
         br
