--- a/views/error/500.jade
+++ b/views/error/500.jade
@@ -2,5 +2,4 @@ extends errorlayout
 
 block error-form
   .annotation
-    .ui.instructive.segment
-      p.text-error= err.stack
+    pre.text-error= err.stack
