--- a/views/index/index.jade
+++ b/views/index/index.jade
@@ -8,21 +8,6 @@ block script
   script(type='text/javascript' src=base.rooturl + '/static/js/index.js?v=#{version.js}')
 
 block bodyheader
-  //.masthead.segment
-    .ui.page.grid
-      .column
-        .introduction
-          h1.ui.header SUSTC
-
-block bg-content
-  //#bg_album_area
-    #bg_album
-      .slider-wrapper
-        #slider-1
-          #slider-content
-          #slider-feed
-
-block content
   //#index_album
     .slider-wrapper
       #slider-1
@@ -31,19 +16,24 @@ block content
     .simple-wrapper
       table.ui.table.segment
         tbody
-  #index_message
-    .ui.segment#news
-      .ui.top.attached.label
-        i.browser.icon
-        = lang.topic.latest_topics
-      .ui.selection.divided.list
-        if (latest_topics && latest_topics.length > 0)
-          each t in latest_topics
-            a.item(href=base.rooturl + '/topic/' + t._id)
-              .content
-                .header= t.title
-              //span.time.pull-right= t.friendly_create_at
-        else
-          .ui.message
-            p= lang.topic.topics_not_found
-
+  .simple-banner
+    .jumbotron.subhead(style="overflow:hidden;")
+      .container
+        h1= lang.base_title
+        #index_message
+          .ui.segment#news
+            .ui.top.attached.label
+              i.browser.icon
+              = lang.topic.latest_topics
+            .ui.selection.divided.list
+              if (latest_topics && latest_topics.length > 0)
+                each t in latest_topics
+                  a.item(href=base.rooturl + '/topic/' + t._id)
+                    .content
+                      .header= t.title
+                    //span.time.pull-right= t.friendly_create_at
+              else
+                .ui.message
+                  p= lang.topic.topics_not_found
+      .sustc-logo
+        
